[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/baseShop/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/baseShop/dialogueBox/shopKeeperDialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/baseShop/baseShop.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/houseInterior.png-95277984b7aa41ab5c4c7c8dbad2abe1.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/jordyn-d.svg-ae803dbba038fb04e391705009ff45dc.stex"

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 36 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/ben-a.svg-5487b1968c96bf522e25bf48adca9255.stex"

[sub_resource type="CapsuleShape2D" id=4]
radius = 18.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 48 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 599.0
texture = SubResource( 1 )
stretch_mode = 4

[node name="shopKeeper" type="KinematicBody2D" parent="."]
position = Vector2( 414, 187 )

[node name="Sprite" type="Sprite" parent="shopKeeper"]
scale = Vector2( 0.6, 0.6 )
texture = SubResource( 3 )

[node name="shopKeeperArea" type="Area2D" parent="shopKeeper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shopKeeper/shopKeeperArea"]
position = Vector2( 2, 1 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 5, -33 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 394, 487 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="player"]
scale = Vector2( 0.5, 0.5 )
texture = SubResource( 2 )

[node name="Feet" type="CollisionShape2D" parent="player"]
position = Vector2( -6, 31 )
rotation = -1.5708
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="player"]

[node name="PlayerArea" type="CollisionShape2D" parent="player/Area2D"]
position = Vector2( -2, 1 )
shape = SubResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 256, 40 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 520, 16, 496, 16, 496, 152, 496, 464, 472, 480, 160, 480, 160, 528, 112, 528, 112, 480, 40, 480, 16, 456, 16, 152, 496, 152, 496, 16, 0, 16, -8, 464, 32, 504, 96, 504, 96, 536, 112, 552, 168, 552, 184, 528, 184, 496, 480, 496, 520, 464 )

[node name="shopKeeperDialogueBox" parent="." instance=ExtResource( 2 )]

[connection signal="area_entered" from="shopKeeper/shopKeeperArea" to="." method="_on_shopKeeperArea_area_entered"]
